--- a/UniversalGanttChartComponent/strings/UniversalGanttChartComponent.1033.resx
+++ b/UniversalGanttChartComponent/strings/UniversalGanttChartComponent.1033.resx
@@ -59,7 +59,10 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+  <xsd:schema id="root"
+    xmlns=""
+    xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+    xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -118,30 +121,30 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Confirm" xml:space="preserve">
-    <value>Are you sure?</value>
+    <value>Er du sikker?</value>
   </data>
   <data name="Day_Name" xml:space="preserve">
-    <value>day</value>
+    <value>dag</value>
   </data>
   <data name="Duration" xml:space="preserve">
-    <value>Duration</value>
+    <value>Varighet</value>
   </data>
   <data name="Duration_Metric" xml:space="preserve">
-    <value>day(s)</value>
+    <value>dag(er)</value>
   </data>
   <data name="Half_Of_Day_Name" xml:space="preserve">
-    <value>half of day</value>
+    <value>halv dag</value>
   </data>
   <data name="Month_Name" xml:space="preserve">
-    <value>month</value>
+    <value>måned</value>
   </data>
   <data name="More" xml:space="preserve">
-    <value>More Records</value>
+    <value>Flere oppgaver</value>
   </data>
   <data name="Quarter_Of_Day_Name" xml:space="preserve">
-    <value>quarter of day</value>
+    <value>Kvart dag</value>
   </data>
   <data name="Week_Name" xml:space="preserve">
-    <value>week</value>
+    <value>uke</value>
   </data>
 </root>
